# MatrixMirix03

./: CLOUDFLARE_DEPLOY.md  DEPLOY.md  DEPLOY_CLOUDFLARE_CONTAINERS.md  DEPLOY_FIX.md  DEPLOY_STREAMLIT_CLOUD.txt  Dockerfile  README.md  STREAMLIT_部署排查.md  app.py  app_demo.py  decision_summary.py  diagnosis.py  eval_schemas.py  eval_set_generator.py  eval_strategy_card_casual_game.json  evalset_sampler.py  openrouter_client.py  package.json  prompts.py  push.bat  push_to_github.bat  pyproject.toml  requirements-api.txt  requirements.txt  run_3100.bat  run_decision_summary_example.py  run_demo_3100.py  run_element_scores_example.py  run_eval_example.py  run_explore_gate_example.py  run_simulate_example.py  run_validate_gate_example.py  run_variant_suggestions_example.py  streamlit_app.py  vertical_config.py  wrangler.containers.toml  wrangler.toml  推送到GitHub-网页上传步骤.txt  部署命令.md
MatrixMirix02/: app_demo.py  eval_schemas.py  eval_set_generator.py  evalset_sampler.py  simulate_metrics.py  variant_suggestions.py  vertical_config.py
samples/: eval_strategy_card_ecommerce.json  vertical_config.json
ui/: styles.py
